Updated index.html with new tags

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
                 <li>Learn about semantic HTML elements</li>
                 <li>Practice creating links and lists</li>
             </ul>
+            <img src="Photoroom-20250117_092913.png" alt="Obed Nyamwaya" width="300" height="200">
         </section>
-</body>
+        <section>
+            <h2>Contact Information</h2>
+            <form action="/submit" method="POST">
+  <label>Name: <input type="text" name="username" /></label>
+  <button type="submit">Send</button>
+</form>
+</body> 
+    </main>
+    <footer>
+        <p>&copy; 2024 Obed Nyamwaya. All rights reserved.</p>
+    </footer>
+</body>   
 </html>
